--- a/css/style.css
+++ b/css/style.css
@@ -142,14 +142,9 @@ button:focus {
 button {
   -webkit-tap-highlight-color: transparent;
 }
-.boost-button {
-  position: relative;
-  z-index: 10; /* Tugmani boshqa elementlardan yuqoriroq qiladi */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Tugmaga shadow qo'shish */
-}
-
-.boost-button:active {
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+.coin-image:active {
+    box-shadow: none !important;
+    transform: none !important;
 }
 
 .boost-container {
