Keshni tozalab yangilash

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   overflow: hidden;
 }
 .container {
-  background: rgba(255, 255, 255, 0.1);
+  /* background: rgba(255, 255, 255, 0.1); */
   padding: 80px 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
@@ -82,14 +82,10 @@ body {
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3),
-    inset 0 2px 3px rgba(255, 255, 255, 0.3);
   transition: all 0.2s ease-in-out;
 }
 .boost-btn:active,
 .boost-panel button:active {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4),
-    inset 0 3px 5px rgba(255, 255, 255, 0.1);
   transform: scale(0.95);
 }
 .boost-btn:hover,
