--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 .container {
   /* background: rgba(255, 255, 255, 0.1); */
-  padding: 80px 20px;
+  padding: 80px 15px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
   width: 330px;
@@ -98,7 +98,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgba(0, 0, 0, 0.2);
+  /* background: rgba(0, 0, 0, 0.2); */
   padding: 20px;
   border-radius: 10px;
   text-align: center;
