--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* background: rgba(0, 0, 0, 0.2); */
+  background: rgba(0, 0, 0, 0.2);
   padding: 20px;
   border-radius: 10px;
   text-align: center;
@@ -126,8 +126,8 @@ body {
 button:active,
 button:focus {
   background-color: #ffa500 !important; /* Tugma rangini o‘zgartiring */
-  outline: none !important; /* Ko‘k chiziqni olib tashlash */
-  box-shadow: none !important;
+  outline: none; /* Ko‘k chiziqni olib tashlash */
+  box-shadow: none ;
 }
 .kuchaytirish-btn:active,
 .kuchaytirish-btn:focus {
