--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,9 @@ button {
 .boost-container img {
   filter: none !important; /* Tasvirning effektlardan ta’sirlanmasligini ta’minlaydi */
 }
+* {
+    -webkit-tap-highlight-color: transparent;
+}
 
 /* MEDIA APP  */
 
